Fix progress list word break in IE

--- a/stylesheets/_component.progress-lists.scss
+++ b/stylesheets/_component.progress-lists.scss
@@ -14,6 +14,7 @@
     display: table-cell;
     padding: .75em 0 .75em 40px;
     text-decoration: none;
+    vertical-align: top;
 
     &:not(:last-child) {
         @include css-arrow(23px, right, $progress-bg);
@@ -56,11 +57,11 @@
 .progress-list__label {
     @include word-break-all;
 
-    display: inline;
+    display: inline-block;
     position: relative;
     text-align: left;
-    z-index: 2;
     width: 100%;
+    z-index: 2;
 
     .badge {
         display: none;
